--- a/M-Commerce-App/GoogleService-Info.plist
+++ b/M-Commerce-App/GoogleService-Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyCFQQGt1X9ckcYsYXaPw1Uq3dB5o59k9-s</string>
+	<string>AIzaSyCyjfOD0hOQdMiFjEZ99PflSeg4Zm-IE6w</string>
 	<key>GCM_SENDER_ID</key>
-	<string>873499023861</string>
+	<string>237755645816</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.M-Commerce-App</string>
+	<string>com.Shopio</string>
 	<key>PROJECT_ID</key>
-	<string>shopifym-commerce-app</string>
+	<string>shopio-77133</string>
 	<key>STORAGE_BUCKET</key>
-	<string>shopifym-commerce-app.firebasestorage.app</string>
+	<string>shopio-77133.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:873499023861:ios:159eb59da2ada5670aa8bc</string>
+	<string>1:237755645816:ios:5cd6072766be05ea5e528d</string>
 </dict>
 </plist>
